# Autonomous-Smart-Wheelchair-with-Dual-Lidar-Collision-Avoidance-

./: .gitignore  README.md
whintel_description/: CMakeLists.txt  package.xml
whintel_description/config/: cartographer_3d.lua
whintel_description/launch/: cartographer_3d.launch.py  display.launch.py  gazebo.launch.py  static_tf.launch.py  wheelchair_world.launch.py
whintel_description/meshes/: base_link.stl  blw_1.stl  brw_1.stl  la_1.stl  lb_1.stl
whintel_description/urdf/: materials.xacro  whintel.gazebo  whintel.trans  whintel.xacro
whintel_description/worlds/: test23.world
