<?xml version="1.0"?>
<package format="3">
  <name>whintel_description</name>
  <version>0.0.1</version>
  <description>Wheelchair robot description with dual LiDARs</description>
  <maintainer email="krish@example.com">Krish</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

